--- a/Humidity.html
+++ b/Humidity.html
@@ -56,7 +56,9 @@
                     
                     <img src="../assets/images/Fig2.png" width="100%" alt="humidity">
                     <br>
-                    <p>Humidity vs latitude plot is not showing any trends. Humidity appears to be mostly regular across latitudes, though with an absence of lower humidity values near the equator and Arctic. This makes sense, due to the humidity of tropical climates, and the northern latitudes being on the boundary between winter and spring.  </p>
+                    <p>The humidity plot graph shows the possible correlation between humidity and latitude. The majority of the data points fall in between 60% and 100% humidity. This would indicate a fairly humid and/or rainy environment.
+
+                    </p>
                 </div>
             </div>
 <!--visualization part of the page-->            
