--- a/Windspeed.html
+++ b/Windspeed.html
@@ -55,7 +55,7 @@
                     <hr>
                     <img src="../assets/images/Fig4.png" width="100%" alt="wind speed">
                     <br>
-                    <p>Wind is the movement of air caused by the uneven heating of the Earth by the Sun. Differences in the atmospheric pressure creates winds. This plot was created using 500 cities latitude information around the world. As a result, we can say that there is no trend or relation between latitude and wind speed, as we get closet to the equator. </p>
+                    <p>The wind speed versus Latitude Plot graph shows most of the data points falling under 10 mph. The highest data point indicating a wind speed of  35 mph and appears to be more of a outlier as opposed to an indication of aggressive wind speed. All in all this graph appears to show a fairly calm environment </p>
                 </div>
             </div>
             <!--visualizations container adjustments-->
