--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -56,7 +56,7 @@
                     <hr>
                     <img src="../assets/images/Fig3.png" width="100%" alt="cloudiness">
                     <br>
-                    <p>This plot doesn't necessarily show any trend between latitude and cloudiness. We can't say cloudiness increase or decrease when latitude get closer to the equator. Clouds tend to form in abundance in the middle latitudes 60 degrees north and south of the equator. This is where the edges of polar and mid latitude circulation cells collide and push air upward. </p>
+                    <p>This cloudiness plot graph gives an idea of the relationship between cloudiness and latitude. Zero cloudiness will obviously give a indication of a dry climate. There are some areas though that appear to you have a fairly high cloudiness percentage. </p>
                 </div>
             </div>
             <!--visualizations container adjustments-->
